--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server/index.js",
     "test": "jest"
   },
   "repository": {
@@ -17,11 +18,14 @@
   },
   "homepage": "https://github.com/OmnitrixSDC/XLR8-Products#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19"
   }
 }
