--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "morgan": "^1.10.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
+    "axios": "^0.27.2",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19"
   }
